fix(shs-6188): menu spacing in global footer

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_global-footer.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_global-footer.scss
@@ -112,7 +112,7 @@
     }
 
     &:last-child {
-      margin-left: 0;
+      margin-right: 0;
     }
   }
 }
